; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_profile_prvd.c_profile_attach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_profile_prvd.c_profile_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"profile\00", align 1
@S_IFCHR = common dso_local global i32 0, align 4
@DDI_PSEUDO = common dso_local global i32 0, align 4
@DDI_FAILURE = common dso_local global i64 0, align 8
@profile_attr = common dso_local global i32 0, align 4
@DTRACE_PRIV_KERNEL = common dso_local global i32 0, align 4
@DTRACE_PRIV_USER = common dso_local global i32 0, align 4
@profile_pops = common dso_local global i32 0, align 4
@profile_id = common dso_local global i32 0, align 4
@PROFILE_MAX_DEFAULT = common dso_local global i32 0, align 4
@profile_max = common dso_local global i32 0, align 4
@DDI_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @profile_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @profile_attach(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = load i32, i32* @S_IFCHR, align 4
  %6 = load i32, i32* @DDI_PSEUDO, align 4
  %7 = call i64 @ddi_create_minor_node(i32* %4, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %5, i32 0, i32 %6, i32 0)
  %8 = load i64, i64* @DDI_FAILURE, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %16, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @DTRACE_PRIV_KERNEL, align 4
  %12 = load i32, i32* @DTRACE_PRIV_USER, align 4
  %13 = or i32 %11, %12
  %14 = call i64 @dtrace_register(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* @profile_attr, i32 %13, i32* null, i32* @profile_pops, i32* null, i32* @profile_id)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %10, %1
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @ddi_remove_minor_node(i32* %17, i32* null)
  %19 = load i64, i64* @DDI_FAILURE, align 8
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %2, align 4
  br label %24

21:                                               ; preds = %10
  %22 = load i32, i32* @PROFILE_MAX_DEFAULT, align 4
  store i32 %22, i32* @profile_max, align 4
  %23 = load i32, i32* @DDI_SUCCESS, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %21, %16
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @ddi_create_minor_node(i32*, i8*, i32, i32, i32, i32) #1

declare dso_local i64 @dtrace_register(i8*, i32*, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @ddi_remove_minor_node(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
